--- a/lesson4_os_history.html
+++ b/lesson4_os_history.html
@@ -25,7 +25,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="./md/03_unix_history.md"
+				<section data-markdown="./md/unix_history.md"
 					 data-separator="^\n---\n$"
 					 data-separator-vertical="^\n>>>\n$"></section>
 			</div>
@@ -33,7 +33,7 @@
                 <div id="hidden" style="display:none;">
                     <div id="header">
 			<div id="header-left">ロボットシステム学</div>
-			<div id="header-right">lesson 3</div>
+			<div id="header-right">lesson 4</div>
 			<div id="footer-left"></div>
                     </div>
                 </div>
