--- a/lesson9_license.html
+++ b/lesson9_license.html
@@ -25,7 +25,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="./md/network.md"
+				<section data-markdown="./md/license.md"
 					 data-separator="^\n---\n$"
 					 data-separator-vertical="^\n>>>\n$"></section>
 			</div>
